# agents-lab

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
benchmarks/: run_benchmark.py
benchmarks/results/: benchmark_20260324_192605.json  benchmark_20260324_231819.json  benchmark_20260324_232158.json  benchmark_20260325_045731.json  benchmark_20260325_110101.json  benchmark_20260325_112931.json  benchmark_20260325_133342.json  benchmark_all_models.json  g1_queryweaver_results.json  g2_kuzu_results.json  g3_neo4j_results.json
benchmarks/test_cases/: chatbi_questions.json  chatbi_questions_1293.json  chatbi_questions_datamart.json
common/: __init__.py
common/database/: __init__.py  connection.py  inspector.py
common/llm/: __init__.py  client.py  models.py
data/: core_tables.json  datamart_schema.sql  noise_tables.json  seed_data.sql  seed_data_expansion.sql  seed_data_expansion_fixed.sql  unified_schema.json
docs/: 01_current_problems.md  02_industry_research.md  03_restructuring_plan.md  05_graph_migration_design.md  06_solution_map.md  benchmark_best_practices.md  benchmark_pipeline_design.md  图数据库方案调研.md
reports/: graph_report_react_20260324_184124.html  graph_report_react_20260325_000215.html  graph_report_react_20260325_003921.html  graph_report_react_20260325_033358.html  graph_report_react_20260325_134540.html
scripts/: explore_database.py  import_seed_data.py  test_connection.py
solutions/: baseline_text2sql.py  common.py  graph_falkordb.py  graph_kuzu.py  graph_neo4j.py  schema_builder.py  static_metadata.py
(+35 files in other folders)
